--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "start": "next start"
     },
     "dependencies": {
+        "@headlessui/react": "^2.2.3",
+        "@heroicons/react": "^2.2.0",
         "@tailwindcss/typography": "^0.5.16",
         "autoprefixer": "^10.4.14",
         "file-saver": "^2.0.5",
