--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
         "start": "next start"
     },
     "dependencies": {
+        "@dnd-kit/core": "^6.3.1",
+        "@dnd-kit/sortable": "^10.0.0",
+        "@dnd-kit/utilities": "^3.2.2",
         "@headlessui/react": "^2.2.3",
         "@heroicons/react": "^2.2.0",
         "@tailwindcss/typography": "^0.5.16",
