--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
     "scripts": {
         "dev": "next dev -p 3001",
         "build": "next build",
-        "start": "next start"
+        "start": "next start",
+        "lint": "next lint",
+        "format": "prettier --write .",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage"
     },
     "dependencies": {
         "@dnd-kit/core": "^6.3.1",
@@ -15,6 +20,7 @@
         "@heroicons/react": "^2.2.0",
         "@tailwindcss/typography": "^0.5.16",
         "autoprefixer": "^10.4.14",
+        "axios": "^1.9.0",
         "file-saver": "^2.0.5",
         "next": "^15.3.1",
         "papaparse": "^5.5.2",
@@ -24,13 +30,26 @@
         "react-dom": "18.2.0",
         "react-hook-form": "^7.43.9",
         "react-qr-code": "^2.0.15",
+        "tailwind-merge": "^3.3.0",
         "tailwindcss": "^3.3.2",
         "typescript": "^5.2.2",
         "xlsx": "^0.18.5"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.1.4",
+        "@testing-library/react": "^14.0.0",
+        "@testing-library/user-event": "^14.6.1",
+        "@types/jest": "^29.5.6",
         "@types/node": "22.14.1",
         "@types/react": "^18.0.28",
-        "@types/react-dom": "^18.0.11"
+        "@types/react-dom": "^18.0.11",
+        "@typescript-eslint/eslint-plugin": "^6.7.0",
+        "@typescript-eslint/parser": "^6.7.0",
+        "eslint": "^8.49.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "prettier": "^3.0.3"
     }
 }
