--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "autoprefixer": "^10.4.14",
         "axios": "^1.9.0",
         "file-saver": "^2.0.5",
+        "html5-qrcode": "^2.3.8",
         "next": "^15.3.1",
         "papaparse": "^5.5.2",
         "postcss": "^8.4.21",
