--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "next": "^15.3.1",
         "papaparse": "^5.5.2",
         "postcss": "^8.4.21",
+        "qrcode": "^1.5.4",
         "qrcode.react": "^4.2.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -42,6 +43,7 @@
         "@testing-library/user-event": "^14.6.1",
         "@types/jest": "^29.5.6",
         "@types/node": "22.14.1",
+        "@types/qrcode": "^1.5.5",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
         "@typescript-eslint/eslint-plugin": "^6.7.0",
