--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
         "html5-qrcode": "^2.3.8",
         "next": "^15.3.1",
         "papaparse": "^5.5.2",
+        "pdfjs-dist": "^5.3.93",
         "postcss": "^8.4.21",
         "qrcode": "^1.5.4",
         "qrcode.react": "^4.2.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.43.9",
+        "react-pdf": "^10.0.1",
         "react-qr-code": "^2.0.15",
         "tailwind-merge": "^3.3.0",
         "tailwindcss": "^3.3.2",
+        "tesseract.js": "^6.0.1",
         "typescript": "^5.2.2",
         "xlsx": "^0.18.5"
     },
