--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,26 +13,14 @@
   "dir": "ltr",
   "icons": [
     {
-      "src": "/nexpo-logo-192.png",
-      "sizes": "192x192",
+      "src": "/nexpo-logo.png",
+      "sizes": "any",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/nexpo-logo-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/nexpo-logo-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "/nexpo-logo-512.png",
-      "sizes": "512x512",
+      "src": "/nexpo-logo.png",
+      "sizes": "any",
       "type": "image/png",
       "purpose": "maskable"
     }
@@ -45,8 +33,8 @@
       "url": "/register",
       "icons": [
         {
-          "src": "/nexpo-logo-192.png",
-          "sizes": "192x192"
+          "src": "/nexpo-logo.png",
+          "sizes": "any"
         }
       ]
     },
@@ -57,25 +45,12 @@
       "url": "/checkin",
       "icons": [
         {
-          "src": "/nexpo-logo-192.png",
-          "sizes": "192x192"
+          "src": "/nexpo-logo.png",
+          "sizes": "any"
         }
       ]
     }
   ],
-  "screenshots": [
-    {
-      "src": "/screenshot-wide.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "form_factor": "wide"
-    },
-    {
-      "src": "/screenshot-narrow.png",
-      "sizes": "750x1334",
-      "type": "image/png",
-      "form_factor": "narrow"
-    }
-  ]
+  "screenshots": []
 }
 
