--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,14 +13,26 @@
   "dir": "ltr",
   "icons": [
     {
-      "src": "/nexpo-logo.png",
-      "sizes": "any",
+      "src": "/nexpo-logo-192.png",
+      "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/nexpo-logo.png",
-      "sizes": "any",
+      "src": "/nexpo-logo-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/nexpo-logo-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/nexpo-logo-512.png",
+      "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     }
